# gym_new_classic_envs

./: .README.md.un~  .gitignore  README.md  README.md~  pyproject.toml  requirements.txt  setup.py
gym_new_classic_envs/: __init__.py
gym_new_classic_envs/envs/arm/: __init__.py  arm_env.py
gym_new_classic_envs/envs/arm/arm_controllers/: armController.py
gym_new_classic_envs/envs/arm/arm_resources/: armAnimation.py  armDynamics.py  armParam.py
gym_new_classic_envs/envs/arm/tests/: armSim_dynamics_test.py  armSim_hwk2.py  armSim_hwk3.py  armSim_hwk7.py  armSim_lqr_test.py  armSim_mpc_gekko.py  armSim_pd_test.py  armSim_pid_test.py
gym_new_classic_envs/envs/ballbeam/: __init__.py  ballbeam_env.py
gym_new_classic_envs/envs/ballbeam/ballbeam_controllers/: ballbeamController.py
gym_new_classic_envs/envs/ballbeam/ballbeam_resources/: ballbeamAnimation.py  ballbeamDataPlotter.py  ballbeamDynamics.py  ballbeamParam.py
gym_new_classic_envs/envs/ballbeam/tests/: ballbeamSim_hwk10.py  ballbeamSim_hwk12.py  ballbeamSim_hwk2.py  ballbeamSim_hwk3.py  ballbeamSim_hwk8.py
gym_new_classic_envs/envs/custom_pendulum/: __init__.py  custom_pendulum.py
gym_new_classic_envs/envs/inv_pend/: __init__.py  inv_pend_env.py
gym_new_classic_envs/envs/inv_pend/inv_pend_resources/: visualize.py  (+4 more)
gym_new_classic_envs/envs/mass/: __init__.py  mass_env.py
gym_new_classic_envs/envs/planar_vtol/: __init__.py  planar_vtol_env.py
gym_new_classic_envs/envs/satellite/: __init__.py  satellite_env.py
gym_new_classic_envs/utils/: signalGenerator.py  visualize.py
tests/: test_arm.py
(+92 files in other folders)
